# py-todo-list

./: pyproject.toml
app/: models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_task_options.py  0003_alter_task_options.py  0004_alter_task_options.py  0005_alter_task_options.py  0006_alter_task_options_alter_tag_name.py  0007_alter_task_content.py  0008_alter_task_content.py  0009_alter_task_tag.py  0010_alter_task_tag.py  0011_alter_task_tag.py  0012_rename_tag_task_tags.py
templates/: base.html
templates/app/: tag_confirm_delete.html  tag_form.html  tag_list.html  task_confirm_delete.html  task_form.html  task_list.html
templates/includes/: pagination.html  sidebar.html
todo_list/: settings.py  urls.py
